# django-deep-dive

./: pyproject.toml
config/: settings.py
